Added ad9833 driver for more efficient sine wave generation

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/kissfft"]
 	path = lib/kissfft
 	url = https://github.com/mborgerding/kissfft.git
+[submodule "lib/ad9833-pico"]
+	path = lib/ad9833-pico
+	url = https://github.com/fhdm-dev/ad9833-pico.git
