--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,2 +1,5 @@
 # Add the peregrine-constellation library
 add_subdirectory(peregrine-constellation/peregrine-constellation)
+
+# Add ad9833 driver
+add_subdirectory(ad9833-pico/lib)
