Basic functionality.. Needs HEAVILY cleaned

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,5 @@
 [submodule "lib/ad9833-pico"]
 	path = lib/ad9833-pico
 	url = https://github.com/Diamond42474/ad9833-pico.git
+[submodule "ad9833-pico"]
+	url = https://github.com/Diamond42474/ad9833-pico.git
