--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,8 +5,8 @@ add_subdirectory(peregrine-constellation/peregrine-constellation)
 add_subdirectory(ad9833-pico/lib)
 
 # Add kiss_fft library
-set(KISSFFT_TEST 0)
-set(KISSFFT_TOOLS 0)
+set(KISSFFT_TEST OFF)
+set(KISSFFT_TOOLS OFF)
 set(KISSFFT_DATATYPE int16_t)
 set(FIXED_POINT 16)
 add_subdirectory(kissfft)
