--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
 	url = https://github.com/Diamond42474/ad9833-pico.git
 [submodule "ad9833-pico"]
 	url = https://github.com/Diamond42474/ad9833-pico.git
+[submodule "lib/c-logger"]
+	path = lib/c-logger
+	url = https://github.com/Diamond42474/c-logger.git
