ci: resolved branch naming issue for changelog generation

--- a/.github/workflows/generate-changelog.yml
+++ b/.github/workflows/generate-changelog.yml
@@ -2,7 +2,9 @@ name: Generate CHANGELOG and open PR
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - master
 
 jobs:
   generate-changelog:
